--- a/SeniorPage.html
+++ b/SeniorPage.html
@@ -15,7 +15,7 @@
     body {
       background: var(--bg);
       font-family: "Arial", sans-serif;
-      font-size: 1.1rem; /* increased for better readability */
+      font-size: 1.1rem;
     }
     .section-card {
       background: var(--card-bg);
@@ -23,17 +23,16 @@
       padding: 1.5rem;
       margin-bottom: 1.5rem;
       box-shadow: 0 4px 6px rgba(0,0,0,0.1);
-      font-size: 1.05rem; /* slightly larger content */
     }
     h1 {
-      font-size: 2.5rem; /* welcome banner headline */
+      font-size: 2.5rem;
     }
     h2 {
       color: var(--accent);
-      font-size: 1.8rem; /* slightly bigger section titles */
+      font-size: 1.8rem;
     }
     .btn-large {
-      font-size: 1.2rem; /* slightly larger buttons */
+      font-size: 1.2rem;
       padding: 14px 28px;
     }
     .welcome-banner {
@@ -44,20 +43,22 @@
       margin-bottom: 2rem;
       text-align: center;
     }
-    .feature-icon {
-      font-size: 2.5rem;
-      margin-bottom: 1rem;
-      display: block;
+    .nurse-card {
+      cursor: pointer;
+      transition: transform 0.2s ease;
     }
-    .image-placeholder {
-      border-radius: var(--radius);
-      height: 180px;
-      background: linear-gradient(45deg, #e3f2fd, #bbdefb);
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      font-size: 2rem;
-      margin-bottom: 1rem;
+    .nurse-card:hover {
+      transform: scale(1.05);
+      background-color: #f0f8ff;
+    }
+    .calendar-input {
+      font-size: 1.3rem;
+      padding: 0.6rem;
+      width: 100%;
+    }
+    select.form-select {
+      font-size: 1.2rem;
+      padding: 0.6rem;
     }
   </style>
 </head>
@@ -68,14 +69,10 @@
   <div class="container">
     <a class="navbar-brand" href="#">SilverCare Portal</a>
     <div class="ms-auto">
-      <a href="login.html" class="btn btn-outline-danger">Log Out</a>
+      <button class="btn btn-outline-danger" onclick="confirmLogout()">Log Out</button>
     </div>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-      <span class="navbar-toggler-icon"></span>
-    </button>
   </div>
 </nav>
-
 
 <!-- Welcome Banner -->
 <section class="container welcome-banner">
@@ -88,8 +85,8 @@
   <div class="row">
     <!-- Left Column -->
     <div class="col-lg-8">
-      
-      <!-- Reminders at the top -->
+
+      <!-- Reminders -->
       <div class="section-card">
         <h2>⏰ Reminders</h2>
         <ul class="list-unstyled">
@@ -120,24 +117,88 @@
         <p><strong>Respiratory Rate:</strong></p>
       </div>
 
+
       <!-- Appointments -->
       <div class="section-card">
         <h2>📅 Appointments</h2>
-        <p>Next Appointment: October 10, 2025 – Dr. Smith</p>
-        <button class="btn btn-primary btn-large" onclick="alert('Booking new appointment...')">Book New Appointment</button>
+        <p id="nextAppointment">Next Appointment: October 10, 2025 – Dr. Smith</p>
+        <button class="btn btn-primary btn-large" onclick="toggleAppointmentBooking()">
+          Book New Appointment
+        </button>
+
+        <!-- Hidden Appointment Section -->
+        <div id="appointmentSection" class="mt-4" style="display: none;">
+          <h4>Select a Nurse:</h4>
+          <div class="row">
+            <div class="col-md-4">
+              <div class="card nurse-card text-center p-2" onclick="selectNurse('Nurse Anna')">
+                <img src="https://via.placeholder.com/100" class="mx-auto rounded-circle" alt="Nurse Anna">
+                <p class="mt-2 mb-0"><strong>Nurse Anna</strong></p>
+              </div>
+            </div>
+            <div class="col-md-4">
+              <div class="card nurse-card text-center p-2" onclick="selectNurse('Nurse Ben')">
+                <img src="https://via.placeholder.com/100" class="mx-auto rounded-circle" alt="Nurse Ben">
+                <p class="mt-2 mb-0"><strong>Nurse Ben</strong></p>
+              </div>
+            </div>
+            <div class="col-md-4">
+              <div class="card nurse-card text-center p-2" onclick="selectNurse('Nurse Clara')">
+                <img src="https://via.placeholder.com/100" class="mx-auto rounded-circle" alt="Nurse Clara">
+                <p class="mt-2 mb-0"><strong>Nurse Clara</strong></p>
+              </div>
+            </div>
+          </div>
+
+          <!-- Calendar and Time Selection -->
+          <div id="calendarSection" class="mt-4" style="display: none;">
+            <h4>Select Date:</h4>
+            <input type="date" id="appointmentDate" class="form-control calendar-input mb-3">
+
+            <h4>Select Time:</h4>
+            <select id="appointmentTime" class="form-select mb-3">
+              <option value="">-- Choose a Time --</option>
+              <option>9:00 AM</option>
+              <option>10:30 AM</option>
+              <option>1:00 PM</option>
+              <option>2:30 PM</option>
+              <option>4:00 PM</option>
+            </select>
+
+            <button class="btn btn-success btn-large" onclick="submitAppointment()">Confirm Appointment</button>
+          </div>
+        </div>
       </div>
 
+      <!-- Manage Emergency Contacts -->
+      <div class="section-card">
+        <h2>📋 Manage Emergency Contacts</h2>
+        <form id="contactForm" class="mb-3">
+          <div class="row g-2">
+            <div class="col-md-5">
+              <input type="text" id="contactName" class="form-control" placeholder="Contact Name" required>
+            </div>
+            <div class="col-md-5">
+              <input type="tel" id="contactPhone" class="form-control" placeholder="Phone Number" required>
+            </div>
+            <div class="col-md-2 d-grid">
+              <button type="submit" class="btn btn-success">Add</button>
+            </div>
+          </div>
+        </form>
+        <ul id="contactList" class="list-group"></ul>
+      </div>
     </div>
 
     <!-- Right Column -->
     <div class="col-lg-4">
-      <!-- Emergency Contacts -->
       <div class="section-card bg-light border border-warning">
         <h2>🚨 Emergency Contacts</h2>
         <p><strong>Emergency:</strong> 911</p>
         <p><strong>SilverCare Helpline:</strong> <a href="tel:+16041234567">(604) 123-4567</a></p>
         <p><strong>Poison Control:</strong> 1-800-567-8910</p>
-        <button class="btn btn-warning w-100 btn-large" onclick="readAloud('Emergency numbers: 9 1 1. SilverCare helpline: 6 0 4, 1 2 3, 4 5 6 7. Poison control: 1 8 0 0, 5 6 7, 8 9 1 0')">
+        <button class="btn btn-warning w-100 btn-large"
+          onclick="readAloud('Emergency numbers: 9 1 1. SilverCare helpline: 6 0 4, 1 2 3, 4 5 6 7. Poison control: 1 8 0 0, 5 6 7, 8 9 1 0')">
           🔊 Read Numbers Aloud
         </button>
       </div>
@@ -157,17 +218,70 @@
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 <script>
+  // Read Aloud
   function readAloud(text) {
     if ('speechSynthesis' in window) {
       const utterance = new SpeechSynthesisUtterance(text);
       utterance.rate = 0.8;
-      utterance.pitch = 1.0;
-      utterance.volume = 1.0;
       window.speechSynthesis.speak(utterance);
     } else {
-      alert('Read aloud not supported in your browser.');
+      alert('Read aloud not supported.');
     }
   }
+
+  // Logout Confirmation
+  function confirmLogout() {
+    if (confirm("Are you sure you want to log out?")) {
+      window.location.href = "login.html";
+    }
+  }
+
+  // Emergency Contacts Add/Delete
+  document.getElementById('contactForm').addEventListener('submit', function(e) {
+    e.preventDefault();
+    const name = document.getElementById('contactName').value.trim();
+    const phone = document.getElementById('contactPhone').value.trim();
+    if (name && phone) {
+      const li = document.createElement('li');
+      li.className = 'list-group-item d-flex justify-content-between align-items-center';
+      li.innerHTML = `<span><strong>${name}</strong> - ${phone}</span>
+                      <button class="btn btn-sm btn-danger">Delete</button>`;
+      li.querySelector('button').addEventListener('click', function() { li.remove(); });
+      document.getElementById('contactList').appendChild(li);
+      e.target.reset();
+    }
+  });
+
+  // Appointment System
+  function toggleAppointmentBooking() {
+    const section = document.getElementById('appointmentSection');
+    section.style.display = section.style.display === 'none' ? 'block' : 'none';
+  }
+
+  function selectNurse(name) {
+    selectedNurse = name;
+    document.getElementById('calendarSection').style.display = 'block';
+  }
+
+  function submitAppointment() {
+    const date = document.getElementById('appointmentDate').value;
+    const time = document.getElementById('appointmentTime').value;
+    if (!selectedNurse || !date || !time) {
+      alert('Please select a nurse, date, and time.');
+      return;
+    }
+
+    document.getElementById('nextAppointment').textContent =
+      `Next Appointment: ${new Date(date).toLocaleDateString()} – ${selectedNurse} at ${time}`;
+
+    alert(`Appointment confirmed with ${selectedNurse} on ${new Date(date).toLocaleDateString()} at ${time}`);
+
+    // Reset view
+    document.getElementById('appointmentSection').style.display = 'none';
+    document.getElementById('calendarSection').style.display = 'none';
+  }
+
+  let selectedNurse = null;
 </script>
 
 </body>
