--- a/html_files/SeniorPage.html
+++ b/html_files/SeniorPage.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>SilverCare Senior Dashboard</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+  <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
   <style>
     :root {
       --bg: #f7fafc;
@@ -24,17 +25,9 @@
       margin-bottom: 1.5rem;
       box-shadow: 0 4px 6px rgba(0,0,0,0.1);
     }
-    h1 {
-      font-size: 2.5rem;
-    }
-    h2 {
-      color: var(--accent);
-      font-size: 1.8rem;
-    }
-    .btn-large {
-      font-size: 1.2rem;
-      padding: 14px 28px;
-    }
+    h1 { font-size: 2.5rem; }
+    h2 { color: var(--accent); font-size: 1.8rem; }
+    .btn-large { font-size: 1.2rem; padding: 14px 28px; }
     .welcome-banner {
       background: linear-gradient(135deg, #0b5ed7, #0dcaf0);
       color: white;
@@ -51,15 +44,20 @@
       transform: scale(1.05);
       background-color: #f0f8ff;
     }
-    .calendar-input {
-      font-size: 1.3rem;
-      padding: 0.6rem;
-      width: 100%;
-    }
-    select.form-select {
-      font-size: 1.2rem;
-      padding: 0.6rem;
-    }
+    .calendar-input { font-size: 1.3rem; padding: 0.6rem; width: 100%; }
+    select.form-select { font-size: 1.2rem; padding: 0.6rem; }
+
+    /* Senior-friendly form styles */
+    .senior-form { font-size: 1.2rem; }
+    .senior-form .form-label { font-weight: bold; font-size: 1.3rem; margin-bottom: 0.5rem; }
+    .senior-form .form-control { font-size: 1.2rem; padding: 0.75rem; margin-bottom: 1rem; }
+    .senior-form .form-text { font-size: 1rem; color: #6c757d; }
+    .required-field::after { content: " *"; color: red; }
+    .contact-card { background-color: #f8f9fa; border-left: 4px solid var(--accent); margin-bottom: 1rem; padding: 1rem; }
+    .contact-card .btn { font-size: 1rem; }
+    .help-text { background-color: #e7f3ff; border-radius: 8px; padding: 0.5rem 1rem; margin-bottom: 1rem; font-size: 1.1rem; }
+    .form-section { margin-bottom: 2rem; padding-bottom: 1.5rem; border-bottom: 1px solid #dee2e6; }
+    .form-section:last-child { border-bottom: none; }
   </style>
 </head>
 <body>
@@ -68,7 +66,10 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-white shadow-sm sticky-top">
   <div class="container">
     <a class="navbar-brand" href="#">SilverCare Portal</a>
-    <div class="ms-auto">
+    <div class="ms-auto d-flex align-items-center">
+      <button class="btn btn-outline-primary me-2" data-bs-toggle="modal" data-bs-target="#changePasswordModal">
+        Change Password
+      </button>
       <button class="btn btn-outline-danger" onclick="confirmLogout()">Log Out</button>
     </div>
   </div>
@@ -80,7 +81,6 @@
   <p>Track your health, appointments, and stay connected with community events.</p>
 </section>
 
-<!-- Main Dashboard -->
 <main class="container">
   <div class="row">
     <!-- Left Column -->
@@ -153,7 +153,6 @@
           <div id="calendarSection" class="mt-4" style="display: none;">
             <h4>Select Date:</h4>
             <input type="date" id="appointmentDate" class="form-control calendar-input mb-3">
-
             <h4>Select Time:</h4>
             <select id="appointmentTime" class="form-select mb-3">
               <option value="">-- Choose a Time --</option>
@@ -163,43 +162,83 @@
               <option>2:30 PM</option>
               <option>4:00 PM</option>
             </select>
-
             <button class="btn btn-success btn-large" onclick="submitAppointment()">Confirm Appointment</button>
           </div>
         </div>
       </div>
 
-      <!-- Manage Emergency Contacts -->
-      <div class="section-card">
+      <!-- Emergency Contacts Form -->
+      <div class="section-card senior-form">
         <h2>📋 Manage Emergency Contacts</h2>
-        <form id="contactForm" class="mb-3 needs-validation" novalidate>
-          <div class="row g-2">
-            <div class="col-md-5">
-              <input type="text" id="contactName" class="form-control" placeholder="Contact Name" required>
-              <div class="invalid-feedback">Please enter a contact name.</div>
+        <div class="help-text">
+          <i class="fas fa-info-circle me-2"></i>Add your emergency contacts below. All fields marked with * are required.
+        </div>
+
+        <form id="contactForm" class="mb-4 needs-validation" novalidate>
+          <div class="row">
+            <div class="col-md-6">
+              <label for="contactName" class="form-label required-field">Full Name</label>
+              <input type="text" id="contactName" class="form-control" placeholder="Enter full name" required>
+              <div class="invalid-feedback">Please enter the contact's full name.</div>
             </div>
-            <div class="col-md-5">
-              <input type="tel" id="contactPhone" class="form-control" placeholder="Phone Number" pattern="[0-9]{10}" required>
-              <div class="invalid-feedback">Please enter a valid 10-digit phone number.</div>
-            </div>
-            <div class="col-md-2 d-grid">
-              <button type="submit" class="btn btn-success">Add</button>
+            <div class="col-md-6">
+              <label for="relationship" class="form-label required-field">Relationship</label>
+              <select id="relationship" class="form-select" required>
+                <option value="">Select relationship</option>
+                <option>Spouse</option>
+                <option>Child</option>
+                <option>Grandchild</option>
+                <option>Sibling</option>
+                <option>Friend</option>
+                <option>Neighbor</option>
+                <option>Other</option>
+              </select>
+              <div class="invalid-feedback">Please select a relationship.</div>
             </div>
           </div>
+
+          <div class="row mt-2">
+            <div class="col-md-6">
+              <label for="contactPhone" class="form-label required-field">Phone Number</label>
+              <input type="tel" id="contactPhone" class="form-control" placeholder="10-digit number (e.g., 6041234567)" pattern="[0-9]{10}" maxlength="10" required>
+              <div class="invalid-feedback">Please enter a valid 10-digit phone number.</div>
+            </div>
+            <div class="col-md-6">
+              <label for="contactEmail" class="form-label">Email Address</label>
+              <input type="email" id="contactEmail" class="form-control" placeholder="email@example.com">
+              <div class="invalid-feedback">Please enter a valid email address.</div>
+            </div>
+          </div>
+
+          <div class="form-check mt-3">
+            <input class="form-check-input" type="checkbox" id="primaryContact">
+            <label class="form-check-label" for="primaryContact">Set as primary emergency contact</label>
+          </div>
+
+          <div class="d-grid gap-2 d-md-flex justify-content-md-end mt-3">
+            <button type="button" class="btn btn-secondary btn-large me-md-2" onclick="clearForm()">
+              <i class="fas fa-eraser"></i> Clear Form
+            </button>
+            <button type="submit" class="btn btn-success btn-large">
+              <i class="fas fa-user-plus"></i> Add Contact
+            </button>
+          </div>
         </form>
-        <ul id="contactList" class="list-group"></ul>
+
+        <h4 class="mt-4">Your Emergency Contacts</h4>
+        <div id="contactList"></div>
       </div>
+
     </div>
 
     <!-- Right Column -->
     <div class="col-lg-4">
       <div class="section-card bg-light border border-warning">
-        <h2>🚨 Emergency Contacts</h2>
+        <h2>🚨 Emergency Numbers</h2>
         <p><strong>Emergency:</strong> 911</p>
         <p><strong>SilverCare Helpline:</strong> <a href="tel:+16041234567">(604) 123-4567</a></p>
         <p><strong>Poison Control:</strong> 1-800-567-8910</p>
-        <button class="btn btn-warning w-100 btn-large"
-          onclick="readAloud('Emergency numbers: 9 1 1. SilverCare helpline: 6 0 4, 1 2 3, 4 5 6 7. Poison control: 1 8 0 0, 5 6 7, 8 9 1 0')">
+        <button class="btn btn-warning w-100 btn-large" onclick="readAloud('Emergency numbers: 9 1 1. SilverCare helpline: 6 0 4, 1 2 3, 4 5 6 7. Poison control: 1 8 0 0, 5 6 7, 8 9 1 0')">
           🔊 Read Numbers Aloud
         </button>
       </div>
@@ -217,8 +256,46 @@
   </div>
 </footer>
 
+<!-- Change Password Modal -->
+<div class="modal fade" id="changePasswordModal" tabindex="-1" aria-labelledby="changePasswordModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content rounded-4">
+      <div class="modal-header">
+        <h5 class="modal-title" id="changePasswordModalLabel">Change Password</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <form id="changePasswordForm" novalidate>
+          <div class="mb-3">
+            <label for="oldPassword" class="form-label">Old Password</label>
+            <input type="password" id="oldPassword" class="form-control" required>
+          </div>
+          <div class="mb-3">
+            <label for="newPassword" class="form-label">New Password</label>
+            <input type="password" id="newPassword" class="form-control" required minlength="6">
+          </div>
+          <div class="mb-3">
+            <label for="confirmPassword" class="form-label">Confirm New Password</label>
+            <input type="password" id="confirmPassword" class="form-control" required>
+          </div>
+          <div class="text-end">
+            <button type="button" class="btn btn-primary" onclick="changePassword()">Update Password</button>
+          </div>
+        </form>
+      </div>
+    </div>
+  </div>
+</div>
+
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 <script>
+  // Logout Confirmation
+  function confirmLogout() {
+    if (confirm("Are you sure you want to log out?")) {
+      window.location.href = "login.html"; // redirect to login page
+    }
+  }
+
   // Read Aloud
   function readAloud(text) {
     if ('speechSynthesis' in window) {
@@ -227,13 +304,6 @@
       window.speechSynthesis.speak(utterance);
     } else {
       alert('Read aloud not supported.');
-    }
-  }
-
-  // Logout Confirmation
-  function confirmLogout() {
-    if (confirm("Are you sure you want to log out?")) {
-      window.location.href = "login.html";
     }
   }
 
@@ -252,61 +322,85 @@
     });
   })();
 
-  // Emergency Contacts Add/Delete
-  document.getElementById('contactForm').addEventListener('submit', function(e) {
-    e.preventDefault();
+  // Emergency Contacts
+  function clearForm() {
+    document.getElementById('contactForm').reset();
+    document.getElementById('contactForm').classList.remove('was-validated');
+  }
 
+  function formatPhoneNumber(phone) {
+    if (phone.length === 10) return `(${phone.substring(0,3)}) ${phone.substring(3,6)}-${phone.substring(6)}`;
+    return phone;
+  }
+
+  function addEmergencyContact() {
     const name = document.getElementById('contactName').value.trim();
+    const relationship = document.getElementById('relationship').value;
     const phone = document.getElementById('contactPhone').value.trim();
+    const email = document.getElementById('contactEmail').value.trim();
+    const isPrimary = document.getElementById('primaryContact').checked;
 
-    // JS validation for phone
-    if (!/^\d{10}$/.test(phone)) {
-      alert("Please enter a valid 10-digit phone number.");
-      return;
+    const contactCard = document.createElement('div');
+    contactCard.className = 'contact-card';
+    contactCard.innerHTML = `
+      <div class="d-flex justify-content-between align-items-start">
+        <div>
+          <h5>${name} ${isPrimary ? '<span class="badge bg-danger ms-2">Primary</span>' : ''}</h5>
+          <p class="mb-1"><strong>Relationship:</strong> ${relationship}</p>
+          <p class="mb-1"><strong>Phone:</strong> ${formatPhoneNumber(phone)}</p>
+          ${email ? `<p class="mb-1"><strong>Email:</strong> ${email}</p>` : ''}
+        </div>
+        <div>
+          <button class="btn btn-sm btn-outline-danger" onclick="this.closest('.contact-card').remove()">
+            <i class="fas fa-trash"></i> Remove
+          </button>
+        </div>
+      </div>
+    `;
+
+    if (isPrimary) {
+      const existing = document.querySelectorAll('.contact-card');
+      existing.forEach(c => {
+        c.querySelector('.badge')?.remove();
+      });
     }
 
-    // Add contact to list
-    const li = document.createElement('li');
-    li.className = 'list-group-item d-flex justify-content-between align-items-center';
-    li.innerHTML = `<span><strong>${name}</strong> - ${phone}</span>
-                    <button class="btn btn-sm btn-danger">Delete</button>`;
-    li.querySelector('button').addEventListener('click', function() { li.remove(); });
-    document.getElementById('contactList').appendChild(li);
+    document.getElementById('contactList').appendChild(contactCard);
+    clearForm();
+  }
 
-    // Reset form
-    e.target.reset();
-    e.target.classList.remove('was-validated');
+  document.getElementById('contactForm').addEventListener('submit', function(e){
+    e.preventDefault(); e.stopPropagation();
+    if(this.checkValidity()) addEmergencyContact();
+    this.classList.add('was-validated');
   });
 
-  // Appointment System
+  // Appointment Booking
   function toggleAppointmentBooking() {
     const section = document.getElementById('appointmentSection');
     section.style.display = section.style.display === 'none' ? 'block' : 'none';
   }
 
-  function selectNurse(name) {
-    selectedNurse = name;
+  function selectNurse(nurseName) {
+    window.selectedNurse = nurseName;
     document.getElementById('calendarSection').style.display = 'block';
   }
 
   function submitAppointment() {
     const date = document.getElementById('appointmentDate').value;
     const time = document.getElementById('appointmentTime').value;
-    if (!selectedNurse || !date || !time) {
-      alert('Please select a nurse, date, and time.');
+
+    if (!date || !time) {
+      alert('Please select both date and time.');
       return;
     }
 
-    document.getElementById('nextAppointment').textContent =
-      `Next Appointment: ${new Date(date).toLocaleDateString()} – ${selectedNurse} at ${time}`;
-
-    alert(`Appointment confirmed with ${selectedNurse} on ${new Date(date).toLocaleDateString()} at ${time}`);
-
+    document.getElementById('nextAppointment').innerText = `Next Appointment: ${date} with ${window.selectedNurse}`;
+    // Hide nurse cards and calendar
     document.getElementById('appointmentSection').style.display = 'none';
-    document.getElementById('calendarSection').style.display = 'none';
+    alert('Appointment booked successfully!');
   }
-
-  let selectedNurse = null;
 </script>
+
 </body>
 </html>
